KhanAcademy.css
/*
* Khan Academy.css by AndrewC10
*
* Released under the MIT Licence | https://github.com/actiniumn404/AoPS-Blog-CSS/blob/main/LICENSE
*
* This is not affiliated in any way with Khan Academy, Inc.
*
* Thank you to @Forester2015 for a little bit of help and feedback.
*/
#wrapper::before {
    content: "";
    display: inline-block;
    background-color: rgb(10, 42, 102);
    position: fixed;
    width: 100vw;
    top: 0px;
    left: 0px;
    z-index: 50;
    border-bottom: 2px solid white;
    height: 62px;
}

#wrapper {
    width: calc(100vw - 15px);
    float: left;
    background: none;
    border: 0;
    padding: 0;
}

#navigation_box {
    padding: 0px;
    border: 1px solid #d6d8da !important;
    position: fixed;
    left: calc((100vw - 1200px) / 2);
    top: 60px;
    z-index: 51;
}

#navigation_box,
#navigation_box>div {
    background-color: white;
    border: 0;
    width: fit-content !important;
    height: fit-content !important;
    font-size: 0px;
    transition: 2s max-height;
}

#navigation_box>div {
    max-height: 0px !important;
    overflow: hidden;
    padding: 0px;
}

#navigation_box a {
    clear: left;
    color: #1865f2 !important;
    margin-bottom: 16px;
    float: left;
    font-size: 16px;
    font-weight: 400;
    text-align: left;
}

#right_navigation_box {
    clear: left;
    float: left;
}

#navigation_box::before {
    content: "Courses "url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' role='img' aria-hidden='true' focusable='false' width='10' height='10' viewBox='0 0 10 10'%3E%3Cpath fill='currentColor' d='M5,6L0,0L10,0' style='fill: rgba(255, 255, 255, 0.48);'/%3E%3C/svg%3E");
    position: fixed;
    z-index: 51;
    top: 24px;
    background: rgb(10, 42, 102);
    left: 0px;
    color: white;
    text-align: left;
    width: 140px;
    z-index: 51;
    left: calc((100vw - 1200px) / 2);
    font-weight: bold;
    font-size: 16px;
}

#navigation_box:hover>div {
    max-height: 1000px !important;
}

#blog_keywords {
    background: rgb(30, 59, 114);
    border-radius: 8px;
    position: fixed;
    color: white;
    left: calc((100vw - 1200px) / 2 + 100px);
    font-weight: bolder;
    font-size: 16px;
    border: 0;
    top: 10px;
    padding: 10px;
    width: 250px;
    height: 40px;
    z-index: 52;
}

#blog_keywords::placeholder {
    color: white;
}

#wrapper::after {
    background: url(https://seeklogo.com/images/K/khan-academy-logo-EFA43B86E0-seeklogo.com.png);
    background-size: auto 28px;
    content: "Khan Academy";
    display: inline-block;
    position: fixed;
    padding-left: 30px;
    top: 17px;
    height: auto;
    z-index: 51;
    background-repeat: no-repeat;
    color: white;
    font-weight: bold;
    font-size: 20px;
    left: 50%;
    transform: translateX(-50%);
}

#header {
    margin-top: 62px;
    background: rgb(10, 42, 102);
    border: 0;
    overflow: hidden;
    height: 130px;
}

#header h1 {
    bottom: -50%;
    color: white !important;
    font-weight: 900;
    text-decoration: none;
    float: left;
    margin-left: calc((100vw - 1200px) / 2);
    font-size: 36px !important;
    line-height: 40px !important;
    padding-bottom: 32px;
}

p.description {
    position: absolute;
    color: white;
    top: 90px;
    z-index: 51;
    opacity: 0.54;
    left: calc((100% - 1200px) / 2 + 5px);
}

#side {
    float: left;
    margin-left: calc((100% - 1200px) / 2);
    padding: 0;
}

#main {
    float: right;
    /*width: calc(50vw + 320px);*/
    width: 940px;
    margin-right: calc((100vw - 1250px) / 2);
}

#content {
    background: #f7f8fa;
}

#blog_keywords+div {
    background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Magnifying_glass_icon.svg/1200px-Magnifying_glass_icon.svg.png);
    background-size: auto 25px;
    background-repeat: no-repeat;
    z-index: 52;
    position: fixed;
    filter: invert(100%);
    height: 40px;
    width: 40px;
    left: calc((100vw - 1200px) / 2 + 310px);
    display: inline-block;
    top: 15px;
}

#search-widget .button2 {
    display: none;
}

.entrywrap {
    background-color: white !important;
    border: solid 1px rgba(33, 36, 44, 0.16) !important;
    border-radius: 4px !important;
    padding-top: 100px !important;
}

.commentwrap {
    background-color: white !important;
    border: solid 1px rgba(33, 36, 44, 0.16) !important;
    border-radius: 4px !important;
}

.comment {
    border: 0 !important;
}

body {
    color: #444;
}

.entry h1 a,
.author a,
#shouts-widget p a,
#contrib-widget a {
    color: #444 !important;
}

.entry h1 {
    position: absolute;
    transform: translate(20px, 20px);
    z-index: 1;
}

.entry h2 {
    position: absolute;
    transform: translate(20px, 60px);
    z-index: 1;
    color: #444;
    border-bottom: solid 1px rgba(33, 36, 44, 0.2) !important;
    width: 25%;
}

#navigation_box:hover #left_navigation_box {
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
    transition: 1s max-height;
}

#navigation_box:hover #right_navigation_box {
    padding-bottom: 10px;
    padding-left: 10px;
    padding-right: 10px;
    transition: 1s max-height;
}

.entry h2 img {
    display: none;
}

.entry h2 a {
    color: #444 !important;
}

#side .user-full .username-colored {
    position: fixed;
    right: calc(50vw - 600px);
    top: 21px;
    z-index: 51;
    color: white !important;
}

#search-widget>*:not(.widget-content) {
    display: none;
}

#search-widget,
#search-widget *:not(fieldset *) {
    border: 0 !important;
    margin: 0 !important;
    padding: 0 !important;
    height: 0px;
    background-color: transparent;
}

.cmty-post-edit-info {
    display: none !important;
}

#post-new-entry-img {
    display: none;
}

#post-new-entry,
.cfooter a:not(.author a),
.efooter a {
    background: rgb(10, 42, 102);
    color: white !important;
    padding: 5px;
    font-size: 11pt;
    margin: 5px;
    text-decoration: none !important;
}


@media only screen and (max-width: 1200px) {

    #navigation_box,
    #navigation_box::before {
        left: 10px;
    }

    #blog_keywords {
        left: 100px;
    }

    #blog_keywords+div {
        left: 310px;
    }

    p.description {
        left: 16px;
    }

    #header h1 {
        margin-left: 16px;
    }

    #side .user-full .username-colored {
        right: 16px;
    }

    #side {
        display: none;
    }

    #main,
    #wrapper {
        width: 100%;
        left: 0px;
        float: left;
    }

    .entry h2 {
        width: 80%;
    }
}

@media only screen and (max-width: 800px) {
    #wrapper::after {
        left: 16px;
        transform: none;
    }

    #navigation_box {
        right: 16px;
        left: auto;
    }

    #navigation_box::before {
        content: "Q";
        width: fit-content;
        left: auto;
        right: 16px;
        font-family: AoPS;
    }

    #blog_keywords {
        left: auto;
        right: 32px;
    }

    #side .user-full .username-colored {
        display: none;
    }
}

